added buttons and methods to test quering the db 	modified:   backend/backend.go 		added methods to handle test get and post 		added section to main to create a dummy problem 	modified:   backend/datastore/datastore.go 		added test post and test get methods 	modified:   frontend/index.html 		added button to make a test get query 	modified:   frontend/index.js 		added jquery to get data from backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,6 +63,7 @@
       <a href="admin.html" class="item">
         Admin
       </a>
+      <button class="item" id='dbTest'>db test</button>
       <div class="right menu">
         <div class="header item"><a id="user-email" class="item"></a></div>
         <div class="g_id_signin" data-onsuccess="onSignIn" data-type="standard"></div>      
