Implemented Sign out button and its functionality.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,6 +67,9 @@
         <div class="header item"><a id="user-email" class="item"></a></div>
         <div class="g_id_signin" data-onsuccess="onSignIn" data-type="standard"></div>      
         <!-- <div class="g-signin2 item" data-onsuccess="onSignIn"></div> -->
+        <button type="button" id="signOutButton" style="visibility: hidden" onclick="onSignOut()" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-log-out"></span> Sign Out
+        </button>
       </div>
     </div>
 
