--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,7 +73,9 @@
 
         <div class="g_id_signin" data-onsuccess="onSignIn" data-type="standard"></div>      
         <!-- <div class="g-signin2 item" data-onsuccess="onSignIn"></div> -->
-        <button type="button" id="signOutButton" style="display: none" onclick="onSignOut()">Sign Out</button>
+      </div id="signOutContainer" style="display: none">
+      <div>
+        <button type="button" id="signOutButton" onclick="onSignOut()">Sign Out</button>
       </div>
     </div>
 
