--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -32,6 +32,7 @@
     <!-- Scripts, local -->
     <script type="text/javascript" charset="utf-8" src="syntax.js"></script>
     <script type="text/javascript" charset="utf-8" src="proofs.js"></script>
+    <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="admin.js"></script>
   </head>
 
@@ -59,7 +60,7 @@
       <h3 id="imageHeader" class="ui header">
 	Welcome to the administration page
       </h3>
-      <p style="margin-left: 40px"><a href="javascript:void(0);" onclick="showAddAdmin()">Add admins/instructors</a><br>
+      <p id="adminSignIn" style="margin-left: 40px" style="display: none"><a href="javascript:void(0);" onclick="showAddAdmin()">Add admins/instructors</a><br>
       <div id="addAdmin" style="padding-bottom: 14px; margin-left: 60px; display: none;">
         <label>Enter admin email:</label>
         <div class="ui input" >
