resolving minor errors after merging with dev

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -60,7 +60,7 @@
       <h3 id="imageHeader" class="ui header">
 	Welcome to the administration page
       </h3>
-      <p id="adminSignIn" style="margin-left: 40px" style="display: none"><a href="javascript:void(0);" onclick="showAddAdmin()">Add admins/instructors</a><br>
+      <p id="adminSignIn" style="margin-left: 40px; display: none"><a href="javascript:void(0);" onclick="showAddAdmin()">Add admins/instructors</a><br>
       <div id="addAdmin" style="padding-bottom: 14px; margin-left: 60px; display: none;">
         <label>Enter admin email:</label>
         <div class="ui input" >
