--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -62,42 +62,64 @@
       </h3>
       <p id="adminSignIn" style="margin-left: 40px; display: none"><a href="javascript:void(0);" onclick="showAddAdmin()">Add admins/instructors</a><br>
       <div id="addAdmin" style="padding-bottom: 14px; margin-left: 60px; display: none;">
-        <label>Enter admin email:</label>
-        <div class="ui input" >
+        <label style="margin-right: 60px;">Enter admin email:</label>
+        <div class="ui input">
           <input id="adminEmail" type="text" placeholder="admin email" data-content="adding someone as admin would be able to do all the operations in this page 👍🏽">
-          <button type="button" class="newAdminBtn" style="margin-left: 20px;">Add admin</button>
+	</div><br>
+        <label style="margin-right: 60px;">Enter admin name:</label>
+        <div class="ui input" >
+          <input id="adminName" type="text" placeholder="admin fullname">
+	</div>
+        <div id="mid-container" >
+          <input type="checkbox" id="checkAdmin" name="admin" value="Admin">Admin<br>  
+          <input type="checkbox" id="checkInstructor" name="instructor" value="Instructor">Instructor<br>  
+	</div><br>
+	<div> <p id="showError" style="color: red;"></p></div>
+        <div id="mid-container" >
+	  <p>Note: Enter only admin or instructor email to delete</p>
+          <button type="button" class="addAdminBtn" style="margin-left: 20px;" onclick="addAdmin();">Add</button>
+          <button type="button" class="deleteAdminBtn" style="margin-left: 20px;" onclick="deleteAdmin();">Delete</button>
 	</div>
       </div>
       <p style="margin-left: 40px"><a href="javascript:void(0);" onclick="showAddStudent()">Assign and unassign students from the section</a><br>
       <div id="addOrDeleteStudent" style="padding-bottom: 14px; margin-left: 60px; display: none;">
-        <label>Enter student email:</label>
+        <label  style="margin-right: 60px;">Enter student email:</label>
         <div class="ui input" >
           <input id="studentEmail" type="text" placeholder="student email" data-content="adding student to section would be able to see all the problems in section 👍🏽">
-	</div>
-	<label>Enter section name:</label>
+	</div><br>
+	<label  style="margin-right: 60px;">Enter section name:</label>
         <div class="ui input" >
           <input id="sectionName" type="text" placeholder="section name" data-content="adding section name will add student to this section name 👍🏽">
-          <button type="button" class="addStudentBtn" style="margin-left: 20px;">Add student</button>
-          <button type="button" class="deleteStudentBtn" style="margin-left: 20px;">Delete student</button>
+	</div><br>
+	<div> <p id="showError2" style="color: red;"></p></div>
+        <div id="mid-container" >
+          <button type="button" class="addStudentBtn" style="margin-left: 20px;" onclick="addStudentToSection();">Add</button>
+          <button type="button" class="deleteStudentBtn" style="margin-left: 20px;" onclick="deleteStudentFromSection();">Delete</button>
 	</div>
       </div>
 
       <p style="margin-left: 40px"><a href="javascript:void(0);" onclick="showSection()">Create or delete section</a><br>
       <div id="addOrDeleteSection" style="padding-bottom: 14px; margin-left: 60px; display: none;">
-        <label>Enter section name:</label>
+        <label style="margin-right: 60px;">Enter section name:</label>
         <div class="ui input" >
           <input id="sectionName2" type="text" placeholder="section name" data-content="adding section name will either create or delete section 👍🏽">
-          <button type="button" class="addSectionBtn" style="margin-left: 20px;">Add section</button>
-          <button type="button" class="deleteSectionBtn" style="margin-left: 20px;">Delete section</button>
+	</div>
+	<div> <p id="showError3" style="color: red;"></p></div>
+        <div id="mid-container" >
+	  <button type="button" class="addSectionBtn" style="margin-left: 20px;" onclick="createSection()">Add</button>
+          <button type="button" class="deleteSectionBtn" style="margin-left: 20px;" onclick="deleteSection()">Delete</button>
 	</div>
       </div>
 
       <p style="margin-left: 40px"><a href = "javascript:void(0);" onclick="showSummary();">Display a summary of the section</a><br>
       <div id="displaySummary" style="padding-bottom: 14px; margin-left: 60px; display: none;">
-	<label>Summary of the section</label>
+	<label style="margin-right: 60px;">Summary of the section:</label>
 	<div class="ui input" >
           <input id="sectionName3" type="text" placeholder="section name" data-content="adding section name will display the summary of students 👍🏽">
-          <button type="button" class="displaySummaryBtn" style="margin-left: 20px;">Display summary</button> 
+	</div>
+	<div> <p id="showError4" style="color: red;"></p></div>
+        <div id="mid-container" >
+          <button type="button" class="displaySummaryBtn" style="margin-left: 20px;" onclick="displaySummary();">Display summary</button> 
 	</div><br>
       </div>
       <div id="displaySummaryTable" style="padding-bottom: 14px; margin-left: 60px; display: none;">
