added sign out class to signet button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,7 +65,7 @@
       </a>
       <div class="right menu">
         <div class="header item" id="signOutContainer" style="display: none">
-          <a href="javascript:void(0)" id="signOutButton" onclick="onSignOut()">Sign Out</a>
+          <a href="javascript:void(0)" class="g_id_signout" id="signOutButton" onclick="onSignOut()">Sign Out</a>
         </div>
 
         <!-- <div class="header item"><a id="user-email" class="item"></a></div> -->
