Removed page reload on signin

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,10 +64,11 @@
         Admin
       </a>
       <div class="right menu">
+        <!-- signout button
         <div class="header item" id="signOutContainer" style="display: none">
           <a href="javascript:void(0)" class="g_id_signout" id="signOutButton" onclick="onSignOut()">Sign Out</a>
         </div>
-
+        -->
         <!-- <div class="header item"><a id="user-email" class="item"></a></div> -->
         <div id="g_id_onload"
           data-client_id="684622091896-1fk7qevoclhjnhc252g5uhlo5q03mpdo.apps.googleusercontent.com"
