--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,6 +29,7 @@
     <script src="assets/lib/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="></script>
     <script src="assets/lib/semantic.min.js" integrity="sha256-t8GepnyPmw9t+foMh3mKNvcorqNHamSKtKRxxpUEgFI="></script>
 
+
     <!-- updated api call for signin -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     
@@ -72,10 +73,10 @@
         <!-- <div class="header item"><a id="user-email" class="item"></a></div> -->
         <div id="g_id_onload"
           data-client_id="684622091896-1fk7qevoclhjnhc252g5uhlo5q03mpdo.apps.googleusercontent.com"
-          data-callback="onSignIn">
+        >
         </div>
 
-        <div class="g_id_signin" data-type="standard"></div>      
+        <div class="g_id_signin" data-onsuccess="onSignIn" data-type="standard"></div>      
         <!-- <div class="g-signin2 item" data-callback="onSignIn"></div> -->
       </div>
     </div>
