--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -25,6 +25,9 @@
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link rel="stylesheet" type="text/css" href="proofs.css" />
 
+    <!-- updated api call for signin 
+    <script src="https://accounts.google.com/gsi/client" async defer></script> -->
+
     <!-- Scripts, third-party -->
     <script src="assets/lib/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="></script>
     <script src="assets/lib/semantic.min.js" integrity="sha256-t8GepnyPmw9t+foMh3mKNvcorqNHamSKtKRxxpUEgFI="></script>
@@ -32,8 +35,8 @@
     <!-- Scripts, local -->
     <script type="text/javascript" charset="utf-8" src="syntax.js"></script>
     <script type="text/javascript" charset="utf-8" src="proofs.js"></script>
-    <script type="text/javascript" src="index.js"></script>
-    <script type="text/javascript" src="admin.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="./admin.js"></script>
   </head>
 
   <body>
@@ -53,6 +56,13 @@
       <a href="admin.html" class="item">
         Admin
       </a>
+      <!--<div class="right menu">
+        <div id="g_id_onload"
+          data-client_id="684622091896-1fk7qevoclhjnhc252g5uhlo5q03mpdo.apps.googleusercont"
+          data-callback="onSignIn">
+        </div>
+        <div class="g_id_signin" data-type="standard"></div>
+      </div>-->
     </div>
 
 
@@ -60,29 +70,40 @@
       <h3 id="imageHeader" class="ui header">
 	Welcome to the administration page
       </h3>
-      <p id="adminSignIn" style="margin-left: 40px; display: none"><a href="javascript:void(0);" onclick="showAddAdmin()">Add admins/instructors</a><br>
-      <div id="addAdmin" style="padding-bottom: 14px; margin-left: 60px; display: none;">
-        <label style="margin-right: 60px;">Enter admin email:</label>
-        <div class="ui input">
-          <input id="adminEmail" type="text" placeholder="admin email" data-content="adding someone as admin would be able to do all the operations in this page 👍🏽">
-	</div><br>
-        <label style="margin-right: 60px;">Enter admin name:</label>
-        <div class="ui input" >
-          <input id="adminName" type="text" placeholder="admin fullname">
-	</div>
-        <div id="mid-container" >
-          <input type="checkbox" id="checkAdmin" name="admin" value="Admin">Admin<br>  
-          <input type="checkbox" id="checkInstructor" name="instructor" value="Instructor">Instructor<br>  
-	</div><br>
-	<div> <p id="showError" style="color: red;"></p></div>
-        <div id="mid-container" >
-	  <p>Note: Enter only admin or instructor email to delete</p>
-          <button type="button" class="addAdminBtn" style="margin-left: 20px;" onclick="addAdmin();">Add</button>
-          <button type="button" class="deleteAdminBtn" style="margin-left: 20px;" onclick="deleteAdmin();">Delete</button>
-	</div>
+      <div id="adminSignIn" style="display: none;">
+        <p  style="margin-left: 40px;"><a href="javascript:void(0);" onclick="showAddAdmin()">Add admin/instructor</a><br>
+        <div id="addAdmin" style="padding-bottom: 14px; margin-left: 60px; display: none;">
+          <label style="margin-right: 60px;">Enter admin email:</label>
+          <div class="ui input">
+            <input id="adminEmail" type="text" placeholder="admin email" data-content="adding someone as admin would be able to do all the operations in this page 👍🏽">
+	  </div><br>
+          <label style="margin-right: 60px;">Enter admin name:</label>
+          <div class="ui input" >
+            <input id="adminName" type="text" placeholder="admin fullname">
+	  </div>
+          <div id="mid-container" >
+            <input type="checkbox" id="checkAdmin" name="admin" value="Admin">Admin<br>  
+            <input type="checkbox" id="checkInstructor" name="instructor" value="Instructor">Instructor<br>  
+	  </div><br>
+	  <div> <p id="showError" style="color: red;"></p></div>
+          <div id="mid-container" >
+            <button type="button" class="addAdminBtn" style="margin-left: 20px;" onclick="addAdmin();">Add</button>
+	  </div>
+        </div>
+        <p style="margin-left: 40px;"><a href="javascript:void(0);" onclick="showDeleteAdmin()">Delete admin/instructor</a><br>
+        <div id="deleteAdmin" style="padding-bottom: 14px; margin-left: 60px; display: none;">
+          <label style="margin-right: 60px;">Enter admin email:</label>
+          <div class="ui input" >
+            <input id="adminEmail2" type="text" placeholder="admin email" data-content="adding someone as admin would be able to do all the operations in this page 👍🏽">
+	  </div><br>
+	  <div> <p id="showError2" style="color: red;"></p></div>
+          <div id="mid-container" >
+            <button type="button" class="deleteAdminBtn" style="margin-left: 20px;" onclick="deleteAdmin();">Delete</button>
+	  </div>
+        </div>
       </div>
-      <p style="margin-left: 40px"><a href="javascript:void(0);" onclick="showAddStudent()">Assign and unassign students from the section</a><br>
-      <div id="addOrDeleteStudent" style="padding-bottom: 14px; margin-left: 60px; display: none;">
+      <p style="margin-left: 40px"><a href="javascript:void(0);" onclick="showAddStudent()">Assign students to the section</a><br>
+      <div id="addStudent" style="padding-bottom: 14px; margin-left: 60px; display: none;">
         <label  style="margin-right: 60px;">Enter student email:</label>
         <div class="ui input" >
           <input id="studentEmail" type="text" placeholder="student email" data-content="adding student to section would be able to see all the problems in section 👍🏽">
@@ -91,22 +112,47 @@
         <div class="ui input" >
           <input id="sectionName" type="text" placeholder="section name" data-content="adding section name will add student to this section name 👍🏽">
 	</div><br>
-	<div> <p id="showError2" style="color: red;"></p></div>
+	<div> <p id="showError3" style="color: red;"></p></div>
         <div id="mid-container" >
-          <button type="button" class="addStudentBtn" style="margin-left: 20px;" onclick="addStudentToSection();">Add</button>
-          <button type="button" class="deleteStudentBtn" style="margin-left: 20px;" onclick="deleteStudentFromSection();">Delete</button>
+          <button type="button" class="addStudentBtn" style="margin-left: 20px;" onclick="addStudentToSection();">Assign</button>
+	</div>
+      </div>
+      <p style="margin-left: 40px"><a href="javascript:void(0);" onclick="showDeleteStudent()">Unassign students from the section</a><br>
+      <div id="deleteStudent" style="padding-bottom: 14px; margin-left: 60px; display: none;">
+        <label  style="margin-right: 60px;">Enter student email:</label>
+        <div class="ui input" >
+          <input id="studentEmail2" type="text" placeholder="student email" data-content="adding student to section would be able to see all the problems in section 👍🏽">
+	</div><br>
+	<label  style="margin-right: 60px;">Enter section name:</label>
+        <div class="ui input" >
+          <input id="sectionName2" type="text" placeholder="section name" data-content="adding section name will add student to this section name 👍🏽">
+	</div><br>
+	<div> <p id="showError4" style="color: red;"></p></div>
+        <div id="mid-container" >
+          <button type="button" class="deleteStudentBtn" style="margin-left: 20px;" onclick="deleteStudentFromSection();">Unassign</button>
 	</div>
       </div>
 
-      <p style="margin-left: 40px"><a href="javascript:void(0);" onclick="showSection()">Create or delete section</a><br>
-      <div id="addOrDeleteSection" style="padding-bottom: 14px; margin-left: 60px; display: none;">
+      <p style="margin-left: 40px"><a href="javascript:void(0);" onclick="showAddSection()">Create section</a><br>
+      <div id="addSection" style="padding-bottom: 14px; margin-left: 60px; display: none;">
         <label style="margin-right: 60px;">Enter section name:</label>
         <div class="ui input" >
-          <input id="sectionName2" type="text" placeholder="section name" data-content="adding section name will either create or delete section 👍🏽">
+          <input id="sectionName3" type="text" placeholder="section name" data-content="adding section name will either create or delete section 👍🏽">
 	</div>
-	<div> <p id="showError3" style="color: red;"></p></div>
+	<div> <p id="showError5" style="color: red;"></p></div>
         <div id="mid-container" >
 	  <button type="button" class="addSectionBtn" style="margin-left: 20px;" onclick="createSection()">Add</button>
+	</div>
+      </div>
+
+      <p style="margin-left: 40px"><a href="javascript:void(0);" onclick="showDeleteSection()">Delete section</a><br>
+      <div id="deleteSection" style="padding-bottom: 14px; margin-left: 60px; display: none;">
+        <label style="margin-right: 60px;">Enter section name:</label>
+        <div class="ui input" >
+          <input id="sectionName4" type="text" placeholder="section name" data-content="adding section name will either create or delete section 👍🏽">
+	</div>
+	<div> <p id="showError6" style="color: red;"></p></div>
+        <div id="mid-container" >
           <button type="button" class="deleteSectionBtn" style="margin-left: 20px;" onclick="deleteSection()">Delete</button>
 	</div>
       </div>
@@ -115,9 +161,9 @@
       <div id="displaySummary" style="padding-bottom: 14px; margin-left: 60px; display: none;">
 	<label style="margin-right: 60px;">Summary of the section:</label>
 	<div class="ui input" >
-          <input id="sectionName3" type="text" placeholder="section name" data-content="adding section name will display the summary of students 👍🏽">
+          <input id="sectionName5" type="text" placeholder="section name" data-content="adding section name will display the summary of students 👍🏽">
 	</div>
-	<div> <p id="showError4" style="color: red;"></p></div>
+	<div> <p id="showError7" style="color: red;"></p></div>
         <div id="mid-container" >
           <button type="button" class="displaySummaryBtn" style="margin-left: 20px;" onclick="displaySummary();">Display summary</button> 
 	</div><br>
@@ -155,20 +201,5 @@
     </div>
 </div>
 
-<!-- Administration Interface -->
-<div class="ui modal">
-  <i class="close icon"></i>
-  <div class="header">
-    Administrator Options
-  </div>
-  <div class="content">
-    <button class="downloadCSV">Download Student Problems as CSV</button>
-  </div>
-  <div class="actions">
-    <div class="ui black deny button">
-      Close
-    </div>
-  </div>
-</div>
 </body>
 </html>
