--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,6 +81,7 @@
     </div>
 
     <!-- middle stuff -->
+    <!--
     <div id="load-container" style="display: none;">
       <div style="float: left;"> 
         <label for="userProofSelect">load unfinished proofs: </label>
@@ -88,21 +89,19 @@
           <option> waiting for server...</option>
         </select>
       </div>
-      <!--  -->
       <div style="float: left; padding-left: .9rem;"> 
         <label for="repoProofSelect">load repository problems: </label>
         <select id="repoProofSelect" class="proofSelect" data-content="Checking a repository problem will overwrite any past attempts of the selected problem.">
           <option> waiting for server...</option>
         </select>
       </div>
-      <!--  -->
       <div style="float: left; padding-left: .9rem;"> 
         <label for="userCompletedProofSelect">finished repository problems: </label>
         <select id="userCompletedProofSelect" class="proofSelect" data-content="Finished repository problems can be edited.">
           <option> waiting for server...</option>
         </select>
       </div>
-    </div>
+    </div> -->
     
     <div class="ui stackable vertically divided grid" style="clear: both;">
       <div class="two column row" style="padding: 1.5rem; padding-top :1rem;">
