--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -25,8 +25,11 @@
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link rel="stylesheet" type="text/css" href="proofs.css" />
 
-    <!-- updated api call for signin 
-    <script src="https://accounts.google.com/gsi/client" async defer></script> -->
+    <!-- api call for signin -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+    <!-- Sign in with Google Client ID -->
+    <meta name="google-signin-client_id" content="684622091896-1fk7qevoclhjnhc252g5uhlo5q03mpdo.apps.googleusercontent.com">
 
     <!-- Scripts, third-party -->
     <script src="assets/lib/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="></script>
@@ -56,13 +59,10 @@
       <a href="admin.html" class="item">
         Admin
       </a>
-      <!--<div class="right menu">
-        <div id="g_id_onload"
-          data-client_id="684622091896-1fk7qevoclhjnhc252g5uhlo5q03mpdo.apps.googleusercont"
-          data-callback="onSignIn">
-        </div>
-        <div class="g_id_signin" data-type="standard"></div>
-      </div>-->
+      <div class="right menu">
+        <div class="header item"><a id="user-email" class="item"></a></div>
+        <div class="g-signin2 item" data-onsuccess="onSignIn"></div>
+      </div>
     </div>
 
 
