new function added to retrieve sectionName by Id

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -108,9 +108,9 @@
         <div class="ui input" >
           <input id="studentEmail" type="text" placeholder="student email" data-content="adding student to section would be able to see all the problems in section 👍🏽">
 	</div><br>
-	<label  style="margin-right: 60px;">Enter section name:</label>
+	<label  style="margin-right: 85px;">Enter section id:</label>
         <div class="ui input" >
-          <input id="sectionName" type="text" placeholder="section name" data-content="adding section name will add student to this section name 👍🏽">
+          <input id="sectionId1" type="text" placeholder="section id" data-content="adding section name will add student to this section name 👍🏽">
 	</div><br>
 	<div> <p id="showError3" style="color: red;"></p></div>
         <div id="mid-container" >
@@ -123,9 +123,9 @@
         <div class="ui input" >
           <input id="studentEmail2" type="text" placeholder="student email" data-content="adding student to section would be able to see all the problems in section 👍🏽">
 	</div><br>
-	<label  style="margin-right: 60px;">Enter section name:</label>
+	<label  style="margin-right: 85px;">Enter section id:</label>
         <div class="ui input" >
-          <input id="sectionName2" type="text" placeholder="section name" data-content="adding section name will add student to this section name 👍🏽">
+          <input id="sectionId2" type="text" placeholder="section id" data-content="adding section id will help in differenciate in sections 👍🏽">
 	</div><br>
 	<div> <p id="showError4" style="color: red;"></p></div>
         <div id="mid-container" >
@@ -137,7 +137,11 @@
       <div id="addSection" style="padding-bottom: 14px; margin-left: 60px; display: none;">
         <label style="margin-right: 60px;">Enter section name:</label>
         <div class="ui input" >
-          <input id="sectionName3" type="text" placeholder="section name" data-content="adding section name will either create or delete section 👍🏽">
+          <input id="sectionName" type="text" placeholder="section name" data-content="adding section name will either create or delete section 👍🏽">
+	</div><br>
+        <label style="margin-right: 85px;">Enter section id:</label>
+        <div class="ui input" >
+          <input id="sectionId3" type="text" placeholder="section id" data-content="adding section id will help in differenciate in sections 👍🏽">
 	</div>
 	<div> <p id="showError5" style="color: red;"></p></div>
         <div id="mid-container" >
@@ -147,9 +151,9 @@
 
       <p style="margin-left: 40px"><a href="javascript:void(0);" onclick="showDeleteSection()">Delete section</a><br>
       <div id="deleteSection" style="padding-bottom: 14px; margin-left: 60px; display: none;">
-        <label style="margin-right: 60px;">Enter section name:</label>
+        <label style="margin-right: 70px;">Enter section id:</label>
         <div class="ui input" >
-          <input id="sectionName4" type="text" placeholder="section name" data-content="adding section name will either create or delete section 👍🏽">
+          <input id="sectionId4" type="text" placeholder="section id" data-content="adding section name will either create or delete section 👍🏽">
 	</div>
 	<div> <p id="showError6" style="color: red;"></p></div>
         <div id="mid-container" >
@@ -161,7 +165,7 @@
       <div id="displaySummary" style="padding-bottom: 14px; margin-left: 60px; display: none;">
 	<label style="margin-right: 60px;">Summary of the section:</label>
 	<div class="ui input" >
-          <input id="sectionName5" type="text" placeholder="section name" data-content="adding section name will display the summary of students 👍🏽">
+          <input id="sectionId5" type="text" placeholder="section id" data-content="adding section name will display the summary of students 👍🏽">
 	</div>
 	<div> <p id="showError7" style="color: red;"></p></div>
         <div id="mid-container" >
