Added sections.html,sections.js, backend functions

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,7 @@
       <a id="adminLink" href="admin.html" class="item" style="display: none">
         Admin
       </a>
-      <a id="sectionsLink" href="sections.html" class="item" style="display: none;">
+      <a id="sectionsLink" href="sections.html" class="item">
         Sections
       </a>
       <div class="right menu">
